assets/css/600-below.css
@media only screen and (max-width: 47.9375em) { /* 767px */

	.main-content .event-details {
		float: none;
		width: 100%;
		margin-left: 0;
		margin-bottom: 24px;
		border-left: 0;
	}

	.main-content .event-details + .event-copy {
		margin-top: 24px;
		margin-right: 0;
		padding-right: 0;
		border-right: 0;
	}

	.main-content .logistics .logistics-block {
		display: inline-block;
		vertical-align: top;
		width: 45%;
		margin-bottom: 1em;
		text-align: left;
	}

	.main-content .logistics .logistics-block:first-of-type {
		padding-right: 18px;
	}

	.main-content .logistics-block.bordered {
		width: 100%;
		text-align: center;
		padding-top: 1em;
	}

	.main-content .logistics span {
		display: inline;
		padding: 0;
	}

	.main-content .logistics span.where {
		display: block;
	}

	.main-content .logistics span.what1:after {
		content: ", ";
	}

	.main-content .logistics span.time {
		display: inline-block;
		clear: both;
	}

	.main-content .logistics span.register-link {
		display: block;
	}

	.main-content .logistics span.big-number,
	.main-content .logistics span.register-link a {
		font-size: 16px;
	}

	.main-content .logistics span.register-link a {
		display: inline;
	}

	.simple-form label {
		width: 100%;
	}

	label.list {
		margin-bottom: 6px;
	}

	.main-wrapper.stacker {
		overflow: hidden;
	}

	.two-column-display .main-content,
	.two-column-display .secondary-column {
		display: block;
		width: auto;
		margin-left:0;
		margin-right: 0;
	}

	.item-summary {
		width: 49%;
	}

	.item-summary:nth-of-type(2n) figure,
	.item-summary:nth-of-type(2n) h1,
	.item-summary:nth-of-type(2n) h2,
	.item-summary:nth-of-type(2n) p,
	.item-summary:nth-of-type(2n) ul {
		margin-right: 0;
	}

	.item-summary:nth-of-type(3n) figure,
	.item-summary:nth-of-type(3n) h1,
	.item-summary:nth-of-type(3n) h2,
	.item-summary:nth-of-type(3n) p,
	.item-summary:nth-of-type(3n) ul {
		margin-right: 24px;
	}

	.variable-column, .variable-column:first-child {
		width: auto;
	}

	.variable-column .item-summary {
		width: auto;
	}

	.main-content > ul.entry-list > li.featured-comment:before {
		font-size: 78px;
	}

	.main-content > ul.entry-list > li.featured-comment p {
		clear: both;
	}

	.main-content > ul.entry-list > li.featured-comment footer .source-title,
	.main-content > ul.entry-list > li.featured-comment footer .commenter-name + time {
		display: inline;
	}

	.two-column-display.no-top .main-content {
		border-right: 0;
	}

	/* ----------------------	COMMENT-FORMS	---------------------- */
	ol.article-comments li.commenter-signin, ol.article-comments li.comment-form {
	    padding: 32px 16px;
	}
	.placeholder.loader .top-header {
    	margin-left: 0px;
    	width: 70%;
	}
	/* ----------------------	TOOLS	---------------------- */
	.main-content.tools {
		width: 80%;
	}
	/* ----------------------	RESPONSIVE TABLES	---------------------- */
	figure:not(.not-rwd) table {
	    display: block;
	    width: 100%;
	    border-bottom: 1px solid #bfbfbf;

	    /*
	     * make everything display block so it 
	     * aligns vertically
	     */
	    /* Labeling
	     * adding a data-title attribute to the cells
	     * lets us add text before the content to provide
	     * the missing context
	     * 
	     * Markup: 
	     *   <td data-title="Column Header">Content Here</td>
	     * 
	     * Display:
	     *   Column Header: Content Here
	     */
	}

	figure:not(.not-rwd) table caption {
		display: block;
	}

	figure:not(.not-rwd) table thead {
		display: none;
		visibility: hidden;
	}

	figure:not(.not-rwd) table tbody, figure:not(.not-rwd) table tr, figure:not(.not-rwd) table th, figure:not(.not-rwd) table td {
		border: 0;
		display: block;
		padding: 0;
		text-align: left;
		white-space: normal;
	}

	figure:not(.not-rwd) table tr {
		margin-bottom: 1em;
	}
	
	figure:not(.not-rwd) .gist table {
		display: table;
	}

	figure:not(.not-rwd) .gist table tr {
		display: table-row;
		margin-bottom: 0;
	}

	figure:not(.not-rwd) .gist table td {
		display: table-cell;
	}

	table th[data-title]:before,
	table td[data-title]:before {
		content: attr(data-title) ": ";
		font-weight: bold;
		font-family: "Franklin ITC", sans-serif;
	}

	table th:not([data-title]) {
		font-weight: bold;
		font-family: "Franklin ITC", sans-serif;
	}

	table td:empty {
		display: none;
	}
	/*--- Turn off zebra striping ---*/
	.main-content > figure:not(.not-rwd) table tbody tr:nth-child(odd) td {
     	background: none; 
	}
	/*--- Turn off column borders ---*/
	.col-1 tr :nth-child(1):not(code), .col-2 tr :nth-child(2):not(code), .col-3 tr :nth-child(3):not(code):not(span), .col-4 tr :nth-child(4):not(code) {
		border: none;
	}

	caption {
		border: none;
		border-bottom: 1px solid #bfbfbf;
	}

	.main-content > figure table th, .main-content > figure table td {
		padding-top: 8px;
		padding-bottom: 8px;
	}
	
	/*for tables up to entry_id 16246 before responsive table implementation using the data-title attribute*/
	figure.not-rwd {
		overflow: auto;
	}

			#home-page .variable-column {
		width: auto;
	}

	#home-page .fixed-column {
		position:static;
	}
}
/* ... */

